--- a/press/playbooks/roles/security_update/tasks/main.yml
+++ b/press/playbooks/roles/security_update/tasks/main.yml
@@ -7,7 +7,7 @@
   shell: apt list --upgradable 2>/dev/null
   register: security_updates
 
-# - name: Ensure no security updates are pending
-#   debug: var=security_updates
-#   failed_when: "'-security' in security_updates.stdout"
-#   when: validate_pending_security_updates
+- name: Ensure no security updates are pending
+  debug: var=security_updates
+  failed_when: "'-security' in security_updates.stdout"
+  when: validate_pending_security_updates is defined
